copy and presentation edits for 2019-10-01 and 2019-10-03 markdown files

--- a/_items/2019-10-01-0006.md
+++ b/_items/2019-10-01-0006.md
@@ -17,7 +17,7 @@ tags: [stuffed animal, culture]
 
 ## About This Object
 
-Guacardo is a tiny stuffed avocado with a spirit of its own - it has legs, arms, and even a silly face. The contributor got this little guy from a website for Latinx youth in the United States called “wearemitu.” This object is among a collection of other items the contributor has from this site. It represents how she has been able to stay connected with her heritage and the Latinx community despite being in an environment where the Latinx population is low.
+Guacardo is a tiny stuffed avocado with a spirit of its own—it has legs, arms, and even a silly face. The contributor got this little guy from a website for Latinx youth in the United States called “wearemitu.” This object is among a collection of other items the contributor has from this site. It represents how she has been able to stay connected with her heritage and the Latinx community despite being in an environment where the Latinx population is low.
 
 >Guacardo sort of started off, like, as a joke. I thought he was cute, I like avocados and my obsession with avocados has sort of grown, but now it’s definitely become a part of my identity. My friends will  show me things with avocados or tag me in things or my sisters will buy me some of the objects. I have this small plush toy, I’ve got the bigger one, I’ve got like two t-shirts and then another half of my birthday present this year was like a pillow that has his image on it. Guacardo is, like, part of how I've embraced more of who I am and my background, being here at IU, just because there aren’t as many of us here. We’re about 7% of the student population at IU and about 7% in the whole state. I’m originally from Florida so there growing up, I was surrounded by a lot of other Latinx individuals. Being here, because it’s not as prevalent, I’ve connected more to it. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
