--- a/_items/2019-10-01-0015.md
+++ b/_items/2019-10-01-0015.md
@@ -31,7 +31,7 @@ If you, like our contributor, see the value of using mudballs to learn about Ear
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BDSee1-4bUI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-But the dorodango isn't just an art form. It's also about the role of play in human development. In the 1960s and '70s, a professor at Indiana University, Annie L. Butler, emphasized the importance of play as development in childhood education, a dedication visible in the [collection of correspondence and publications](http://purl.dlib.indiana.edu/iudl/findingaids/archives/InU-Ar-VAA3219) she bequeathed to IU's University Archives. We can see her discussions of the ways that play shapes young childrens' learning environments echoed in our History Harvest contributor's description of how he uses the creation of dorodango to explore play in higher-education classrooms.
+But the dorodango isn't just an art form. It's also about the role of play in human development. In the 1960s and '70s, a professor at Indiana University, Annie L. Butler, emphasized the importance of play as development in childhood education, a dedication visible in the [collection of correspondence and publications](http://purl.dlib.indiana.edu/iudl/findingaids/archives/InU-Ar-VAA3219) she bequeathed to IU's University Archives. We can see her discussions of the ways that play shapes young children's learning environments echoed in our History Harvest contributor's description of how he uses the creation of dorodango to explore play in higher-education classrooms.
 
 The making of dorodango was revived in the late 1990s by Professor Fumiu Kayo, a Japanese professor studying the intersection of experimentation and play in childhood development.[^1] Kayo's research suggests that it is important for children to learn about nature through experiencing nature. The combination of play and experimentation involved in making dorodango helps very young children acquire a respect for nature and learn mental balance, lessons that last well into adulthood.[^2]
 
