--- a/_items/2019-10-03-0001.md
+++ b/_items/2019-10-03-0001.md
@@ -28,9 +28,9 @@ The Prohibition Era started on January 17th, 1920, and over the next 13 years, t
 
 Among the decline in arrests for drunkeness and a reported 30% drop in consumption[^1], the terms "bootlegging" and "speakeasies" started to appear. Bootlegging refered to the illegal production and selling of alcohol, while speakeasies refered to anything from stores, nightclubs, and restaurants that sold alcohol during this time. It is estimated that there were anywhere from 20,000-100,000 speakeasies in New York City alone during Prohibition.[^2] 
 
-[![NYC Speakeasies](https://img.youtube.com/vi/LeLJb0dL8VU&feature=emb_logo/0.jpg)](https://www.youtube.com/watch?v=LeLJb0dL8VU&feature=emb_logo)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LeLJb0dL8VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-Come February 1933, President Roosevelt called for the end of Prohibition with the 21st Amendment to the Constitution, ending the 13 year drought. If you would like to read more on the Prohibition Era, more information can be found [here](https://www.history.com/topics/roaring-twenties/prohibition) and [here](https://www.theguardian.com/film/2012/aug/26/lawless-prohibition-gangsters-speakeasies)
+Come February 1933, President Roosevelt called for the end of Prohibition with the 21st Amendment to the Constitution, ending the 13 year drought. If you would like to read more on the Prohibition Era, more information can be found [here](https://www.history.com/topics/roaring-twenties/prohibition) and [here](https://www.theguardian.com/film/2012/aug/26/lawless-prohibition-gangsters-speakeasies).
 
 [^1]: History.com Editors. “Prohibition.” History.com. A&E Television Networks, October 29, 2009. https://www.history.com/topics/roaring-twenties/prohibition.
 
