--- a/_items/2019-10-03-0005.md
+++ b/_items/2019-10-03-0005.md
@@ -9,7 +9,7 @@ itemcreator: N/A
 itemsubject: Tattoo
 itemacquiredwhere: St. Louis Missouri
 itemindianacity: Bloomington
-itemdatemade: c.a. 2014
+itemdatemade: ca. 2014
 itemtype: Physical Object
 shortdesc: A tattoo of a snake wrapped around a woman's hand in black, blue, and orange, with a *1.3*. 
 categories: [ tattoo, snake, community, yoga, change ]
@@ -17,7 +17,7 @@ tags: [  ]
 ---
 ## About This Object
 
-On the surface, other than a piece of artwork, this tattoo just looks like a hand holding a snake; however, the meaning of it, and the *1.3* run deeper. The *1.3* represents a line in Yoga Sutra that says: "Then the seer becomes established in its true nature." [^1] The snake and the woman's hand are representitive of not only Kate's love for snakes, but also her view about them and their ability to shed their skin and, as Kate says, they are "a symbol of transformation... I like that they can show that humans are often going through a lot."
+On the surface, other than a piece of artwork, this tattoo just looks like a hand holding a snake; however, the meaning of it, and the *1.3* run deeper. The *1.3* represents a line in Yoga Sutra that says: "Then the seer becomes established in its true nature."[^1] The snake and the woman's hand are representitive of not only Kate's love for snakes, but also her view about them and their ability to shed their skin and, as Kate says, they are "a symbol of transformation... I like that they can show that humans are often going through a lot."
 
 >I have multiple tattoos on one arm that reflect my identification of a community of people who seek comfort in the esoteric. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
@@ -25,13 +25,13 @@ On the surface, other than a piece of artwork, this tattoo just looks like a han
 ## A History Harvest Perspective
 ### Tattoo Culture
 
-Tattoos have become more popular over the past few years, and roughly 38% of people have at least one tattoo before they reach 30 years-old. [^2]
+Tattoos have become more popular over the past few years, and roughly 38% of people have at least one tattoo before they reach 30 years-old.[^2]
 
 This growing trend has led to a growing industry where not only clinets can express their creative freedom and connections to a band, idea, animal, cultire, etc., but also the artists that physically tattoo it on the body. If you would like to read more on the study of tattoo culture, more information can be found [here](https://www.smithsonianmag.com/arts-culture/looking-at-the-worlds-tattoos-60545660/).
 
 ### Yoga Culture
 
-Roughly 20.4 million Aerican's practice yoga (roughly 9%). [^3] Here in America, the most common reasons for one to start practicing yoga were to improve not only flexibility, but also their conditioning, stress relief, and improve their health overall. If you want to read more about the benefits of yoga, more information can be found [here](https://www.yogajournal.com/lifestyle/count-yoga-38-ways-yoga-keeps-fit).
+Roughly 20.4 million Aerican's practice yoga (roughly 9%).[^3] Here in America, the most common reasons for one to start practicing yoga were to improve not only flexibility, but also their conditioning, stress relief, and improve their health overall. If you want to read more about the benefits of yoga, more information can be found [here](https://www.yogajournal.com/lifestyle/count-yoga-38-ways-yoga-keeps-fit).
  
  
 [^1]: Study And Download Yoga Online, yogainternational.com/article/view/yoga-sutra-1-3-translation-and-commentary.
