--- a/_items/2019-10-03-0008.md
+++ b/_items/2019-10-03-0008.md
@@ -25,13 +25,12 @@ The other books listed in this collection contain information on a variety of to
 
 Josiah Kirby Lilly Jr. and his family donated a large selection of medical importance to the Lilly Library between 1954-1957. The collection consisted of roughly 20,000 books and 17,000 manuscripts that had impacts on the evolution of medicine and science. This donation from the Lilly Family inspired then-IU President Herman B Wells to construct the Lilly Library which opened its doors in October of 1960.[^2]
 
-If you would like to view this extensive collection, which includes writings on blood circulation from 1628, Fracastoro's poem on syphilis from 1530, and books on plastic surgery from 1597, the link can be found [here](https://libraries.indiana.edu/lilly-library/medicine-and-science )
+If you would like to view this extensive collection, which includes writings on blood circulation from 1628, Fracastoro's poem on syphilis from 1530, and books on plastic surgery from 1597, the link can be found [here](https://libraries.indiana.edu/lilly-library/medicine-and-science ).
 
 ## From the Contributor
 
 >I've, since a very young child, been very interested in how the world works and I learned at some point that you can make a living that way. Very rarely do young children get exposed to the thought that they can do something that they really love to do. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 
-[^1]: More information on this object: https://iucat.iu.edu/catalog/4891002
-[^2]: Medicine and Science 
-https://libraries.indiana.edu/lilly-library/medicine-and-science
+[^1]: More information on [this object](https://iucat.iu.edu/catalog/4891002).
+[^2]: [Medicine and Science](https://libraries.indiana.edu/lilly-library/medicine-and-science) at the Lilly.
