--- a/_items/2019-10-03-0012.md
+++ b/_items/2019-10-03-0012.md
@@ -23,10 +23,10 @@ AJ perceives this lipstick as something that added value to sense of self-worth 
 ## Makeup as a form of Empowerment
 ### A History Harvest Perspective
 
-Each face is beautiful because it has its own individual personality and depth. Grooming and beauty are essentially a fashion statement and the growing cosmetic products industry is evidence of this trend. Empowerment stems from gratifying one’s sense of self-worth and this could be channeled through any means like education or sports or beauty. Empowerment is an individual perception. People of color have embraced their race and physical identities with pride, one example is found through [Ginetta Candelario](www.jstor.org/stable/40338439), when she tells that black women cared for their hair and beauty, not to look “white”, but to look beautiful. It is this attitude that has been adopted by AJ that symbolizes her individual empowerment and breaking free of any beauty norms as defined by the majority of the society.
+Each face is beautiful because it has its own individual personality and depth. Grooming and beauty are essentially a fashion statement and the growing cosmetic products industry is evidence of this trend. Empowerment stems from gratifying one’s sense of self-worth and this could be channeled through any means like education or sports or beauty. Empowerment is an individual perception. People of color have embraced their race and physical identities with pride, one example is found through [Ginetta Candelario](https://www.jstor.org/stable/40338439), when she tells that black women cared for their hair and beauty, not to look “white”, but to look beautiful. It is this attitude that has been adopted by AJ that symbolizes her individual empowerment and breaking free of any beauty norms as defined by the majority of the society.
 
-A common misconception with makeup is that it is normally worn because one "feels insecure."[^1] As above, it tends to be quite the opposite. Most women that dawn makeup before leaving in the morning, or before a night out, wear it to feel a sense of empowerment, creativity, and freedom to express themselves in another form. If you are interested in reading more about makeup and the science behind why some women choose to wear it, more information can be found [here](https://www.scienceofpeople.com/makeup/)
+A common misconception with makeup is that it is normally worn because one "feels insecure."[^1] As above, it tends to be quite the opposite. Most women that don makeup before leaving in the morning, or before a night out, wear it to feel a sense of empowerment, creativity, and freedom to express themselves in another form. If you are interested in reading more about makeup and the science behind why some women choose to wear it, more information can be found [here](https://www.scienceofpeople.com/makeup/).
 
-[^1]: “The Power of the Rouge Pot.” The New York Times, The New York Times, www.nytimes.com/roomfordebate/2013/01/02/does-makeup-hurt-self-esteem/using-makeup-shows-love-for-yourself.
+[^1]: “[The Power of the Rouge Pot.](https://www.nytimes.com/roomfordebate/2013/01/02/does-makeup-hurt-self-esteem/using-makeup-shows-love-for-yourself)” The New York Times.
 
 
