--- a/_items/2019-10-03-0006.md
+++ b/_items/2019-10-03-0006.md
@@ -23,9 +23,9 @@ Reusable waterbottles and thermoses have become a growing trend and means of sel
 ## Customization Culture in the Modern Day
 ### A History Harvest Perspective
 
-With options like steel, glass, and plastic, reusable waterbottles and thermoses have a seemingly infinite number of ways to be customized to express how one wants to be represented. One of the ways that people choose to show this is customization is by stickers. By phiscally being able to add more to an object, stickers allow one to show places they have been (such as with this thermos), communities they are a part of (such as IU with some schools having stickers), or achievements (such as the "26.2" sticker representing one running a marathon) along with many other things. 
+With options like steel, glass, and plastic, reusable waterbottles and thermoses have a seemingly infinite number of ways to be customized to express how one wants to be represented. One of the ways that people choose to show this is customization is by stickers. By physically being able to add more to an object, stickers allow one to show places they have been (such as with this thermos), communities they are a part of (such as IU with some schools having stickers), or achievements (such as the "26.2" sticker representing one running a marathon) along with many other things. 
 
-Here at Indiana University, it is near impossible to find someone who does not have a sticker somewhere on their computer, waterbottle, thermos, backapck, etc. Along with stickers, many people also use pins, buttons, cases, the list goes on for ways to express oneself through personal customization of their objects. These artforms provide an inside look into the subcultures and communities that one identitfies with.[^2]
+Here at Indiana University, it is near impossible to find someone who does not have a sticker somewhere on their computer, waterbottle, thermos, backpack, etc. Along with stickers, many people also use pins, buttons, cases, the list goes on for ways to express oneself through personal customization of their objects. These artforms provide an inside look into the subcultures and communities that one identitfies with.[^2]
 
 Do you happen to have stickers, pins, anything visual that shows and represents something of importance to you? What about a case on your computer? Maybe it's an Apple sticker for their logo on your Mac, or the sunglass sticker that you recieved from the Auditorium during your orientation. Whatever one's choice of customization, those features allow them to freely express their communities and identities on everyday objects, giving them a deepier level of connection with their object.
 
