--- a/_items/2019-10-03-0009.md
+++ b/_items/2019-10-03-0009.md
@@ -23,9 +23,9 @@ This purse was created by Kathy herself from a repurposed pillow sham she found 
 ## Creating Objects from Repurposed Materials
 ### A History Harvest Perspective
 
-This one is not the first that she has made from repurposing the materials she finds. Through these projects that use repurposed material, artist of all skill levels, backgrounds, and artforms have the chance to express their creativity while also lending a hand to helping the enviornment. Numerous studies by the Environmental Protection Agency have stressed the importance of reusing the repurposing materials. [^1] They also give a list of reasons to why one should repurpose their materials instead of throwing them away. Some of the reasons include saving energy, saving money, sustanablitiy, and allowing products to be used to their full extent.[^2] 
+This one is not the first that she has made from repurposing the materials she finds. Through these projects that use repurposed material, artist of all skill levels, backgrounds, and artforms have the chance to express their creativity while also lending a hand to helping the enviornment. Numerous studies by the Environmental Protection Agency have stressed the importance of reusing the repurposing materials. [^1] They also give a list of reasons to why one should repurpose their materials instead of throwing them away. Some of the reasons include saving energy, saving money, sustainability, and allowing products to be used to their full extent.[^2] 
 
-Indiana Univeristy also has a handful of books in its collection about creating objects out of repurposed materials. One of those books, "Re-bound," can be found [here](https://iucat.iu.edu/catalog/9094228). If you want to try your hand at making one yourself, Karen McLennan give a step-by-step tutorial here:
+Indiana University also has a handful of books in its collection about creating objects out of repurposed materials. One of those books, "Re-bound," can be found [here](https://iucat.iu.edu/catalog/9094228). If you want to try your hand at making one yourself, Karen McLennan give a step-by-step tutorial here:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/nUnYUFs_KYY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
