--- a/_items/2019-10-03-0011.md
+++ b/_items/2019-10-03-0011.md
@@ -16,12 +16,13 @@ tags: [  ]
 ---
 ## About This Object
 
-This Giro bike helmet was given to the contributor from her husband. Even before receiving the helmet, the contributor and their significat other both shared a love for the outdoors and Bloomington's natural beauty. They both fequent the B-Line trail, hiking trails, and the tradition that Indiana University holds every May: The Little 500.
+This Giro bike helmet was given to the contributor from her husband. Even before receiving the helmet, the contributor and their significant other both shared a love for the outdoors and Bloomington's natural beauty. They both fequent the B-Line trail, hiking trails, and the tradition that Indiana University holds every May: The Little 500.
 
 ## The Little 500
 ### A History Harvest Perspective
 
-The Little 500 is a tradition that is held every year at Bill Armstrong Staduim. It is a bike race that consists of riding around the gravel track at the staduim (100 laps for the women's race, 200 for the men's). The race is a fundraiser for scholarships at Indiana University. A very breif video showing the week of Little 500 is shown below:
+The Little 500 is a tradition that is held every year at Bill Armstrong Stadium. It is a bike race that consists of riding around the gravel track at the stadium (100 laps for the women's race, 200 for the men's). The race is a fundraiser for scholarships at Indiana University. A very brief video showing the week of Little 500 is shown below:
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tUdN4idSDxc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 Along with the tradition of the Little 500, the contributor also mentions that another one of their loves of cycling is that of being able to stay healthy. Jennifer Bonham has written about the benefits and healthy aspects that cycling has, even to those who ride for leasure, can maintain a healthy lifestyle. [^1] 
@@ -33,4 +34,4 @@ It only takes a few minutes of walking around the streets of Bloomington, and In
 >Biking is my first priority [for staying healthy]. And biking in good weather is something I enjoy doing with my husband. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 [^1]: Rissel, Chris. “Health Benefits of Cycling.” Cycling Futures, edited by Jennifer Bonham and Marilyn Johnson, University of Adelaide Press, South Australia, 2015, pp. 43–62. JSTOR, www.jstor.org/stable/10.20851/j.ctt1sq5x1g.8. Accessed 22 Feb. 2020.
- [^2]: “City of Bloomington, Indiana.” Biking in Bloomington | City of Bloomington, Indiana, bloomington.in.gov/transportation/bike.
+[^2]: “City of Bloomington, Indiana.” Biking in Bloomington. City of Bloomington, Indiana, bloomington.in.gov/transportation/bike.
