--- a/_items/2019-10-03-0013.md
+++ b/_items/2019-10-03-0013.md
@@ -16,9 +16,9 @@ tags: [  ]
 ---
 ## About This Object
 
-This silver necklace was given to Ms. Jiang from her parents as a 30th birthday present. It symbolizes the their love to her and she recieved it during one of their visits to her here in Bloomington. This necklace, however, is not of traditional Chinese design. Many traditional designs involve intricate details, with inspirations coming from poems, fairy tales, paintings, etc. [^1] Some details and methods of creating Chinese jewelry and other forms of art date back to roughly 1600 B.C. with the use of knotting art. An example of knotted jewelry can be found below:
+This silver necklace was given to Ms. Jiang from her parents as a 30th birthday present. It symbolizes the their love to her and she recieved it during one of their visits to her here in Bloomington. This necklace, however, is not of traditional Chinese design. Many traditional designs involve intricate details, with inspirations coming from poems, fairy tales, paintings, etc.[^1] Some details and methods of creating Chinese jewelry and other forms of art date back to roughly 1600 B.C. with the use of knotting art. An example of knotted jewelry can be found below:
 
-![Knotting Jewelry Example](/IUBHistoryHarvest/assets/images/knotting_example.jpg)!
+![Knotting Jewelry Example](https://iubhistoryharvest.github.io/assets/images/knotting_example.jpg)!
 
 Other traditional forms of Chinese jewelry use gemstones such as jade, opal, and tourmaline. If you would like to read more about traditional Chinese jewelry in the modern day, information can be found [here](https://www.gia.edu/gems-gemology/spring-2015-chinese-soul-contemporary-jewelry-design).
 
@@ -26,4 +26,4 @@ Other traditional forms of Chinese jewelry use gemstones such as jade, opal, and
 
 >Thirty years old, that is very important. I mean, a turning point of people's lives and I wear this necklace and I think I should live a better life. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
-[^1]: Lucas, Andrew. “The Chinese Soul in Contemporary Jewelry Design.” Gems & Gemology, www.gia.edu/gems-gemology/spring-2015-chinese-soul-contemporary-jewelry-design.
+[^1]: Lucas, Andrew. “[The Chinese Soul in Contemporary Jewelry Design.](https://www.gia.edu/gems-gemology/spring-2015-chinese-soul-contemporary-jewelry-design.)” Gems & Gemology.
