--- a/_items/2019-10-03-0011.md
+++ b/_items/2019-10-03-0011.md
@@ -33,5 +33,5 @@ It only takes a few minutes of walking around the streets of Bloomington, and In
 
 >Biking is my first priority [for staying healthy]. And biking in good weather is something I enjoy doing with my husband. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
-[^1]: Rissel, Chris. “Health Benefits of Cycling.” Cycling Futures, edited by Jennifer Bonham and Marilyn Johnson, University of Adelaide Press, South Australia, 2015, pp. 43–62. JSTOR, www.jstor.org/stable/10.20851/j.ctt1sq5x1g.8. Accessed 22 Feb. 2020.
-[^2]: “City of Bloomington, Indiana.” Biking in Bloomington. City of Bloomington, Indiana, bloomington.in.gov/transportation/bike.
+[^1]: Rissel, Chris. [“Health Benefits of Cycling.”](https://www.jstor.org/stable/10.20851/j.ctt1sq5x1g.8) Cycling Futures, edited by Jennifer Bonham and Marilyn Johnson, University of Adelaide Press, South Australia, 2015, pp. 43–62. JSTOR. Accessed 22 Feb. 2020.
+[^2]: City of Bloomington, Indiana. ["Biking in Bloomington."](bloomington.in.gov/transportation/bike) City of Bloomington, Indiana.
