make more links pretty for 2019.10.01 and 2019.10.03

--- a/_items/2019-10-01-0003.md
+++ b/_items/2019-10-01-0003.md
@@ -34,6 +34,6 @@ The hat is a representation of not only music, but also a distinct community bas
 
 #### Notes
 
-[^1]: Gracyk, Theodore A. “Romanticizing Rock Music.” Journal of Aesthetic Education, vol. 27, no. 2, 1993, pp. 43–58. JSTOR, www.jstor.org/stable/3333411. Accessed 28 Feb. 2020.
-[^2]: https://www.researchgate.net/publication/312047097_The_music_never_stopped_naming_businesses_as_a_method_for_remembering_the_Grateful_Dead
-[^3]: https://www.npr.org/templates/transcript/transcript.php?storyId=139259106
+[^1]: Gracyk, Theodore A. [“Romanticizing Rock Music.”](https://www.jstor.org/stable/3333411) Journal of Aesthetic Education, vol. 27, no. 2, 1993, pp. 43–58. JSTOR. Accessed 28 Feb. 2020.
+[^2]: [“The Music Never Stopped”: Naming Businesses as a Method for Remembering the Grateful Dead](https://www.researchgate.net/publication/312047097_The_music_never_stopped_naming_businesses_as_a_method_for_remembering_the_Grateful_Dead)
+[^3]: [Ken Kesey on Misconceptions of Counterculture](https://www.npr.org/templates/transcript/transcript.php?storyId=139259106)
