--- a/_items/2019-10-01-0008.md
+++ b/_items/2019-10-01-0008.md
@@ -34,6 +34,6 @@ When in Europe, one of the most popular modes of transportation for both tourist
 Regardless of the method of transportation as you travel, traveling has numerous benefits, including increasing mental health, reducing stress, inspiring creativity, and assisting in cross-cultural understanding. [^4] 
 
 [^1]: https://www.unwto.org/global-and-regional-tourism-performance
-[^2]: Blackall, Molly. “Global Tourism Hits Record Highs - but Who Goes Where on Holiday?” The Guardian, Guardian News and Media, 1 July 2019, www.theguardian.com/news/2019/jul/01/global-tourism-hits-record-highs-but-who-goes-where-on-holiday.
-[^3]: Abend, Lisa. “Why Many Europeans Are Opting for Train Travel Over Flying.” Time, Time, 6 Aug. 2019, time.com/5641390/europe-train-air-travel/.
-[^4]: Alton, Larry. “5 Scientifically Proven Health Benefits of Traveling Abroad.” NBCNews.com, NBCUniversal News Group, 19 May 2017, www.nbcnews.com/better/wellness/5-scientifically-proven-health-benefits-traveling-abroad-n759631.
+[^2]: Blackall, Molly. [“Global Tourism Hits Record Highs - but Who Goes Where on Holiday?”](https://www.theguardian.com/news/2019/jul/01/global-tourism-hits-record-highs-but-who-goes-where-on-holiday) The Guardian, Guardian News and Media, 1 July 2019.
+[^3]: Abend, Lisa. [“Why Many Europeans Are Opting for Train Travel Over Flying.”](https://time.com/5641390/europe-train-air-travel/) Time, Time, 6 Aug. 2019.
+[^4]: Alton, Larry. [“5 Scientifically Proven Health Benefits of Traveling Abroad.”](https://www.nbcnews.com/better/wellness/5-scientifically-proven-health-benefits-traveling-abroad-n759631) NBCNews.com, NBCUniversal News Group, 19 May 2017.
