--- a/_items/2019-10-01-0015.md
+++ b/_items/2019-10-01-0015.md
@@ -39,5 +39,5 @@ The dorodango contribution brings ideas of play from Professor Butler's mid-cent
 
 #### Notes
 
-[^1]: Sheng, Yi. “A Post-Communist Picnic.” May 15, 2010. https://doi.org/https://doi.org/10.25772/C12G-DK49.
+[^1]: Sheng, Yi. [“A Post-Communist Picnic.”](https://doi.org/https://doi.org/10.25772/C12G-DK49) May 15, 2010.
 [^2]: Blattner, Géraldine, and Melissa Fiori. "Virtual Social Network Communities: An Investigation of Language Learners’ Development of Sociopragmatic Awareness and Multiliteracy Skills." CALICO Journal 29, no. 1 (2011): 24-43.
