--- a/_items/2019-10-03-0001.md
+++ b/_items/2019-10-03-0001.md
@@ -32,6 +32,6 @@ Among the decline in arrests for drunkeness and a reported 30% drop in consumpti
 
 Come February 1933, President Roosevelt called for the end of Prohibition with the 21st Amendment to the Constitution, ending the 13 year drought. If you would like to read more on the Prohibition Era, more information can be found [here](https://www.history.com/topics/roaring-twenties/prohibition) and [here](https://www.theguardian.com/film/2012/aug/26/lawless-prohibition-gangsters-speakeasies).
 
-[^1]: History.com Editors. “Prohibition.” History.com. A&E Television Networks, October 29, 2009. https://www.history.com/topics/roaring-twenties/prohibition.
+[^1]: History.com Editors. [“Prohibition.”](https://www.history.com/topics/roaring-twenties/prohibition) History.com. A&E Television Networks, October 29, 2009.
 
-[^2]: New-York Historical Society, n.d. https://www.nyhistory.org/community/speakeasies.
+[^2]: [Speakeasies.](https://www.nyhistory.org/community/speakeasies). New-York Historical Society, n.d.
