--- a/_items/2019-10-03-0006.md
+++ b/_items/2019-10-03-0006.md
@@ -29,5 +29,5 @@ Here at Indiana University, it is near impossible to find someone who does not h
 
 Do you happen to have stickers, pins, anything visual that shows and represents something of importance to you? What about a case on your computer? Maybe it's an Apple sticker for their logo on your Mac, or the sunglass sticker that you recieved from the Auditorium during your orientation. Whatever one's choice of customization, those features allow them to freely express their communities and identities on everyday objects, giving them a deepier level of connection with their object.
 
-[^1]: Mull, Amanda. “How Fancy Water Bottles Became a 21st-Century Status Symbol.” The Atlantic, Atlantic Media Company, 4 Nov. 2019, www.theatlantic.com/health/archive/2019/02/luxury-water-bottles/582595/.
-[^2]: Keys, Kathleen. "Contemporary Visual Culture Jamming: Redefining Collage as Collective, Communal, & Urban." Art Education 61, no. 2 (2008): 98-101. Accessed March 7, 2020. www.jstor.org/stable/27696284.
+[^1]: Mull, Amanda. [“How Fancy Water Bottles Became a 21st-Century Status Symbol.”](https://www.theatlantic.com/health/archive/2019/02/luxury-water-bottles/582595/) The Atlantic, Atlantic Media Company, 4 Nov. 2019.
+[^2]: Keys, Kathleen. ["Contemporary Visual Culture Jamming: Redefining Collage as Collective, Communal, & Urban."](https://www.jstor.org/stable/27696284) Art Education 61, no. 2 (2008): 98-101. Accessed March 7, 2020.
