--- a/_items/2019-10-03-0009.md
+++ b/_items/2019-10-03-0009.md
@@ -32,5 +32,5 @@ Indiana University also has a handful of books in its collection about creating 
 Through her craft, Kathy also teaches others the art of repurposing materials. She does this through her one of her groups here in Monroe County called "Domestic Engineers." There are roughly 10-15 groups like this here in the Bloomington and Monroe County area and are open to anyone interested in hand-created arts. If you are interested in finding out more about what these clubs do, you can read about them [here](https://www.hoosiertimes.com/herald_times_online/life/at_home/mceha-clubs-share-their-passion-for-the-home/article_89aef3a6-35f9-5d8b-a662-b05eccf305c7.html). 
 
 
-[^1]: “Indiana University.” IUCAT, iucat.iu.edu/catalog/1386319.
-[^2]: “Reducing and Reusing Basics.” EPA, Environmental Protection Agency, 25 Nov. 2019, www.epa.gov/recycle/reducing-and-reusing-basics.
+[^1]: [“Indiana University.”](https://iucat.iu.edu/catalog/1386319) IUCAT.
+[^2]: [“Reducing and Reusing Basics.”](https://www.epa.gov/recycle/reducing-and-reusing-basics) EPA, Environmental Protection Agency, 25 Nov. 2019.
