--- a/_items/2019-10-03-0010.md
+++ b/_items/2019-10-03-0010.md
@@ -39,10 +39,10 @@ This Pano was brought to Bloomington, Indiana as a physical result of community 
 
 ## Works Cited
 
-Bunn, Stephanie. "A 'Making Point of View': Deep Knowledge from Local Practice, with Special Reference to Felt-makers in Kyrgyzstan." Journal of Museum Ethnography, no. 24, 2011, pp. 23–40. JSTOR, www.jstor.org/stable/41710453.
+Bunn, Stephanie. ["A 'Making Point of View': Deep Knowledge from Local Practice, with Special Reference to Felt-makers in Kyrgyzstan."](https://www.jstor.org/stable/41710453) Journal of Museum Ethnography, no. 24, 2011, pp. 23–40. JSTOR.
 
 Bunn, Stephanie. Nomadic Felts. 
 
 Krebs, Melanie. "Zwischen Handwerktradition und globalem Markt: Kunsthandwerker in Usbekistan und Kirgistan." Berlin, Klaus Schwarz, 2011.
 
-LaRoche, Cheryl J., and Gary S. McGowan. "'Material Culture': Conservation and Analysis of Textiles Recovered from Five Points." Historical Archaeology, vol. 35, no. 3, 2001, pp. 65–75. JSTOR, www.jstor.org/stable/25616939.
+LaRoche, Cheryl J., and Gary S. McGowan. ["'Material Culture': Conservation and Analysis of Textiles Recovered from Five Points."](https://www.jstor.org/stable/25616939) Historical Archaeology, vol. 35, no. 3, 2001, pp. 65–75. JSTOR.
