--- a/_items/2019-10-01-0006.md
+++ b/_items/2019-10-01-0006.md
@@ -33,6 +33,6 @@ As digital media outlets, such as Twitter, Facebook, and Instagram, have prolife
 
 #### Notes
 
-[^1]: http://purl.dlib.indiana.edu/iudl/findingaids/cshm/ohrc104
+[^1]: ["Testimonios: Documenting the Lives and Faith of Latino Immigrants, 2001-2002."](http://purl.dlib.indiana.edu/iudl/findingaids/cshm/ohrc104)
 [^2]: Blattner, Géraldine, and Melissa Fiori. "Virtual Social Network Communities: An Investigation of Language Learners’ Development of Sociopragmatic Awareness and Multiliteracy Skills." CALICO Journal 29, no. 1 (2011): 24-43.
-[^3]: Mesa, Cristal. “We Are Mitú.” we are mitú. wearemitu, February 14, 2020. https://wearemitu.com/.
+[^3]: Mesa, Cristal. [“We Are Mitú.”](https://wearemitu.com/) we are mitú. wearemitu, February 14, 2020.
