--- a/_items/2019-10-03-0003.md
+++ b/_items/2019-10-03-0003.md
@@ -33,4 +33,4 @@ The rituals associated with celebrating a birthday can give a sense of belonging
 
 These celebrations can also help remind us of our own histories and communities that we choose to belong to. They remind us that we are social by nature, choosing to surround ourself with those who are close to us, that we belong to certain groups, cultures, and backgrounds, and that celebrations can gives us a way to express our gratitude, cultural heritage, and feelings towards others.
 
-[^1]: Smith-Shank, Deborah L. "Community Celebrations as Ritual Signifiers." Visual Arts Research 28, no. 2 (2002): 57-63. Accessed March 6, 2020. www.jstor.org/stable/20716064.
+[^1]: Smith-Shank, Deborah L. ["Community Celebrations as Ritual Signifiers."](https://www.jstor.org/stable/20716064) Visual Arts Research 28, no. 2 (2002): 57-63. Accessed March 6, 2020.
