--- a/_items/2019-10-03-0005.md
+++ b/_items/2019-10-03-0005.md
@@ -34,6 +34,6 @@ This growing trend has led to a growing industry where not only clinets can expr
 Roughly 20.4 million Aerican's practice yoga (roughly 9%).[^3] Here in America, the most common reasons for one to start practicing yoga were to improve not only flexibility, but also their conditioning, stress relief, and improve their health overall. If you want to read more about the benefits of yoga, more information can be found [here](https://www.yogajournal.com/lifestyle/count-yoga-38-ways-yoga-keeps-fit).
  
  
-[^1]: Study And Download Yoga Online, yogainternational.com/article/view/yoga-sutra-1-3-translation-and-commentary.
-[^2]: Newman, Meredith. “Report: More Young People Have Tattoos and Piercings than Ever Before.” USA Today, Gannett Satellite Information Network, 20 Sept. 2017, www.usatoday.com/story/news/nation-now/2017/09/20/young-people-tattoos-and-piercings-report/686360001/.
-[^3]: “HOW Many Americans Practice Yoga?” HuffPost, HuffPost, 7 Dec. 2012, www.huffpost.com/entry/american-yoga_n_2251360.
+[^1]: [Study And Download Yoga Online.](https://yogainternational.com/article/view/yoga-sutra-1-3-translation-and-commentary). yogainternational.com.
+[^2]: Newman, Meredith. [“Report: More Young People Have Tattoos and Piercings than Ever Before.”](https://www.usatoday.com/story/news/nation-now/2017/09/20/young-people-tattoos-and-piercings-report/686360001/) USA Today, Gannett Satellite Information Network, 20 Sept. 2017.
+[^3]: [“HOW Many Americans Practice Yoga?”](https://www.huffpost.com/entry/american-yoga_n_2251360) HuffPost, HuffPost, 7 Dec. 2012.
