copy edit for 2019.10.08 markdown files

--- a/_items/2019-10-08-0002.md
+++ b/_items/2019-10-08-0002.md
@@ -17,9 +17,9 @@ tags: [culture, campaign buttons]
 
 ## About This Object
 
-This pin tells a girls story of how she made a life changing decision and it drasticly altered her experinece she had while she attended Indiana University. 
+This pin tells a girls story of how she made a life changing decision and it drastically altered the experience she had while she attended Indiana University. 
 
-It tells us how this girl joined a social group ran by an African American girl that was set out to help people specifically afrcian americans figure out who and what they want to do while here on campus at IU.  It talks about how this pin/button changed the way this girl thought of herself, and helped her find herself and create a new experinece for herself within this culture at Indiana University.
+It tells us how this girl joined a social group ran by an African American girl that was set out to help people specifically African Americans figure out who and what they want to do while here on campus at IU.  It talks about how this pin/button changed the way this girl thought of herself, and helped her find herself and create a new experience for herself within this culture at Indiana University.
 
 ## From the Contributor
 
