--- a/_items/2019-10-08-0005.md
+++ b/_items/2019-10-08-0005.md
@@ -33,9 +33,9 @@ Additionally, the idea of community is emphasized in a [series of interviews wit
 
 ### Building a Stronger Bond
 
-As for some, it maybe be difficult for some to grasp moving to a totally different country.  This maybe a shock for some, but for others, it is just a way to find sanctuary.  That may be leaving loved ones, friends, a job and much more.  Everything has changed for migrants looking to come from Mexico to the US.  Early on, it wasn't about worrying to stop crime or drug smuggling, people came as they pleased.  For families now, it is difficult to get [across the boarder]  (https://www.youtube.com/watch?v=rLZB_EkgFBQ) without the worry of deportation or getting seperated from other family members. The journey that now happens is totally different from the 1960s or 1970s.  As we look at Nana's Cobija, it shows that success story of making it to the US, along with a sense of family.  As for Rebecca, it is a reminder to what we all hope for and care about so much, family.
+As for some, it maybe be difficult for some to grasp moving to a totally different country.  This maybe a shock for some, but for others, it is just a way to find sanctuary.  That may be leaving loved ones, friends, a job and much more.  Everything has changed for migrants looking to come from Mexico to the US.  Early on, it wasn't about worrying to stop crime or drug smuggling, people came as they pleased.  For families now, it is difficult to get [across the border](https://www.youtube.com/watch?v=rLZB_EkgFBQ) without the worry of deportation or getting seperated from other family members. The journey that now happens is totally different from the 1960s or 1970s.  As we look at Nana's Cobija, it shows that success story of making it to the US, along with a sense of family.  As for Rebecca, it is a reminder to what we all hope for and care about so much, family.
 
 To learn more on hispanic and latino culture, check out [IU's La Casa] (https://lacasa.indiana.edu/) for events, services and more!
 
 
-![This was the method used.](/H301HistoryHarvest/assets/images/networkanalysis2.PNG)!
+![This was the method used.](/assets/images/networkanalysis2.PNG)!
