--- a/_items/2019-10-08-0001.md
+++ b/_items/2019-10-08-0001.md
@@ -30,19 +30,17 @@ These kente sashes are handmade sashes that are used as an accessory for special
 
 Not only do these kente sashes represent the culture of the community our contributor grew up in, but also her own identity, as a student and an immigrant! 
 
-Kente sashes have a long history in both Ghana and the United States, and hold a strong significance connecting wisdom, the experiences of black diaspora, and identity. Kente cloth weaving dates back to about 1000 B.C. in Ghana and were first created for royalty. They were used as communication and represent clan and social membership. Each color used has its own symbolism.[^1]. For example, blue represents spirit and harmony, and yellow represents fertility and prosperity. The chart below breaks down what each color represents:
-
-
+Kente sashes have a long history in both Ghana and the United States, and hold a strong significance connecting wisdom, the experiences of black diaspora, and identity. Kente cloth weaving dates back to about 1000 B.C. in Ghana and were first created for royalty. They were used as communication and represent clan and social membership. Each color used has its own symbolism.[^1] For example, blue represents spirit and harmony, and yellow represents fertility and prosperity. The chart [on this page](https://www.kentecloth.net/kente-cloth-colors/)[^1] breaks down what each color represents:
 
 The kente pattern itself can be seen in various spheres in the United States. This video explains the roots of kente, what it symbolizes, how the significance of this pattern has transformed, and how it holds both political and cultural importance in the U.S. 
 
 <iframe width="560" height="315" src="https://fod.infobase.com/p_ViewVideo.aspx?xtid=30606" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-As you can see, you can find this pattern in practically any realm of American society because of the cultural impact it has made[^2]. If you’ve been to a college graduation ceremony, there’s a good chance you’ve actually seen a Kente Sash.  They are a popular tradition in post-secondary education. Many Black Americans wear them over their robes to celebrate their personal achievement of graduating college and the experiences they’ve had by connecting that to their culture and ancestry with the sashes.[^2].
+As you can see, you can find this pattern in practically any realm of American society because of the cultural impact it has made.[^2] If you’ve been to a college graduation ceremony, there’s a good chance you’ve actually seen a Kente Sash.  They are a popular tradition in post-secondary education. Many Black Americans wear them over their robes to celebrate their personal achievement of graduating college and the experiences they’ve had by connecting that to their culture and ancestry with the sashes.[^2]
 
-The tradition of graduation sashes is reflected in other communities across the United States, and even the Indiana University community! While these sashes do not represent the experiences of black diaspora, like Kente Sashes, they still celebrate the experience, heritage, and achievement of their own culture. Gamma Phi Omega, a latina sorority at IU, encouraged its members to order graduation sashes in 1997 to celebrate their community identities. The next time you’re at a commencement ceremony be sure to look around to see what the students graduating are wearing over their robes so you can understand a little more about who each person is and the role each individual, culture, and community play in creating the Indiana University identity.[^3]. 
+The tradition of graduation sashes is reflected in other communities across the United States, and even the Indiana University community! While these sashes do not represent the experiences of black diaspora, like Kente Sashes, they still celebrate the experience, heritage, and achievement of their own culture. Gamma Phi Omega, a latina sorority at IU, encouraged its members to order graduation sashes in 1997 to celebrate their community identities. The next time you’re at a commencement ceremony be sure to look around to see what the students graduating are wearing over their robes so you can understand a little more about who each person is and the role each individual, culture, and community play in creating the Indiana University identity.[^3]
 
-[^1]: Lloyd, Kodzo. “Kente Cloth Colors.” KenteClothnet, January 19, 2018. https://www.kentecloth.net/kente-cloth-colors/.
+[^1]: Lloyd, Kodzo. [“Kente Cloth Colors.”](https://www.kentecloth.net/kente-cloth-colors/) KenteClothnet, January 19, 2018.
 [^2]: Wrapped In Pride: Story of Kente In America. New York, N.Y.: Infobase, 2006.
-[^3]: http://webapp1.dlib.indiana.edu/findingaids/view?brand=general&docId=InU-Ar-VAA1380.xml&chunk.id=d1e504&text1=stole&startDoc=1#1
+[^3]: [Gamma Phi Omega Records.](http://webapp1.dlib.indiana.edu/findingaids/view?brand=general&docId=InU-Ar-VAA1380.xml&chunk.id=d1e504&text1=stole&startDoc=1#1)
  
