copy edit for 2019.10.09 markdown files

--- a/_items/2019-10-09-0005.md
+++ b/_items/2019-10-09-0005.md
@@ -35,4 +35,4 @@ Star Trek itself has one of the fastest growing fandom communities, and the Trek
 If you want to discover more about the Star Trek community on IU’s campus, be sure to check out the Indiana University Archives! It has tons of original Star Trek scripts, set pictures, editors notes, and more, making IU a major hub for Star Trek TV memorabilia[^2]. 
 
 [^1]: Byrd, Patricia. "Star Trek Lives: Trekker Slang." American Speech 53, no. 1 (1978): 52-58. Accessed February 21, 2020. doi:10.2307/455340.
-[^2]:https://webapp1.dlib.indiana.edu/findingaids/view?brand=general&docId=InU-Li-VAA4805.xml&doc.view=entire_text
+[^2]: ["Papers of Jeri Taylor at the Lilly Library.""](https://webapp1.dlib.indiana.edu/findingaids/view?brand=general&docId=InU-Li-VAA4805.xml&doc.view=entire_text)
