copy edit for 2019.10.10 markdown files

--- a/_items/2019-10-10-0001.md
+++ b/_items/2019-10-10-0001.md
@@ -27,11 +27,10 @@ However, sports isn’t just about representation and societal change. Using spo
 
 These cleats are something that not only expresses the individual, but also showcases that individuals creative.  From the NFL to Pee Wee Football, customizable cleats are all over.  Not only becoming popular in football, other sports have become crazed by the sneaker customization, and some are even making a living off customizing kicks.
 
-<iframe src="https://www.youtube.com/watch?v=ylcauBrLHgU" width="640" height="480"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ylcauBrLHgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 Creativity is not only a big part of both the athlete and the artist, but it is also the individuality.  Some cleats are seen as "the same" but others have something that may relate to the athlete in a certain way.  From a childhood memory or something that they have loved forever, the cleats represent the individual in their certain way.  
 
 Individuality is a big part of life and all-around we are thought of as individuals.  From what we eat to what we wear, we each think of ourselves as individuals.  Even back in 1949, the Big Blue Book had a section published called: *The Enemies of Individuality and Mental Freedom: A Lecture on Why the Church Hates Thinkers*.  This book discussed many different avenues on why the church hated individuals.  I think this was the same thing that the NFL head to deal with when thinking about allowing the cleats to be worn during games.  The same thing with the church happened in many different aspects.
 
-![Indiana History Network](/H301HistoryHarvest/assets/images/Networks.png)! 
-
+![Indiana History Network](/assets/images/Networks.png)! 
