copy edit for 2019.10.11 markdown files

--- a/_items/2019-10-11-0001.md
+++ b/_items/2019-10-11-0001.md
@@ -28,4 +28,4 @@ This is a scrapbook that is still currently in the process of being created by t
 
 This temple represents how Indiana University participates in both national and international contexts. While it is a replica of  China's Golden Temple of Jeholwas and spent a lot of time exhibited at the New York’s World’s Fair in the 1920’s and 1930’s, its roots are in the midwest.  It was first built in Chicago from copper shillings from South Bend, Indiana and Indiana limestone. With various owners over the course of its existence, IU is now its fifth owner.[^1].
 
-[^1]: Kaiser, Robert L. “CHICAGO-BORN TEMPLE TRAVELS A STRANGE ROAD.” chicagotribune.com, August 29, 2018. https://www.chicagotribune.com/news/ct-xpm-1998-06-30-9806300058-story.html.
+[^1]: Kaiser, Robert L. [“Chicago-Born Temple Travels a Strange Road.”](https://www.chicagotribune.com/news/ct-xpm-1998-06-30-9806300058-story.html) chicagotribune.com, August 29, 2018.
