--- a/_items/2019-10-11-0002.md
+++ b/_items/2019-10-11-0002.md
@@ -25,10 +25,10 @@ Kimonos like these date back historic times in East Asia for both men and women.
 
 Kimonos have been a huge part of Japanese culture and here is a little secret about kimonos you may have not known about.
 
-https://www.youtube.com/watch?v=M7Cerw3vBCc
+<iframe width="560" height="315" src="https://www.youtube.com/embed/M7Cerw3vBCc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 Many Kimonos used for this celebration can cost upwards of ¥1,000,000 (roughly $9,200 USD), and lead women to have long, exhausting days of preparation for their "Coming of Age" Celebration, a wedding, funeral, etc. One example of this is shown in a scene from Madame Butterfly preformed at Indiana University. In it, you can see a women donning a more casual Kimono with her hair and makeup complete, while a man stands in a Western suit.
 
 Kimonos are a certain identity for Japan that reaches other continents world-wide.  As these aren't common as before, they are still very proudly worn in different scenarios.  When reading **Kimono and the Construction of Gendered and Cultural Identities** it tells not only about the history but more on how kimonos play into the culture of Japan.  To learn more on Japanese culture, Indiana University Southeast has a [Japan Center](https://www.ius.edu/japan-center/index.html) for students, staff, faculty, and the public to learn more on the Japanese culture.
 
-![Seeing how a dragon kimono relates to Indiana History](/H301HistoryHarvest/assets/images/Networks.png)!
+![Seeing how a dragon kimono relates to Indiana History](/assets/images/Networks.png)!
