--- a/_items/2019-10-11-0005.md
+++ b/_items/2019-10-11-0005.md
@@ -16,7 +16,7 @@ tags:
 ---
 ## About This Object
 
-This is a book, titled The Intro Guide to a Sex Positive You: Lessons Tales and Tips, written by the contributor. It was published last year, and it is about sex-positivity. 
+This is a book, titled *The Intro Guide to a Sex Positive You: Lessons Tales and Tips,** written by the contributor. It was published last year, and it is about sex-positivity. 
 
 ## From the Contributor
 
